--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body>
     <div class="content">
-        <h2>iPersistence，我们已经在一起了</h2>
+        <h2>Babe，我们已经在一起了</h2>
         <div class="timer">
             <b id="d"></b> Days <b id="h"></b> Hours <b id="m"></b> Minutes <b id="s"></b> Seconds
         </div>
@@ -52,7 +52,7 @@
     <script language="javascript">
         function timer() {
           window.setTimeout("show_date_time()", 1000);
-          var start = new Date("2018-06-07 00:00:00"); // 2015.7.2
+          var start = new Date("2016-12-31 10:00:00"); // 2015.7.2
             var t = new Date().getTime() - start;
             var h = ~~(t / 1000 / 60 / 60 % 24);
             if (h < 10) {
@@ -73,6 +73,9 @@
         }
         timer();
     </script>
+    <div class="content">
+        <h3>此生所爱，矢志不渝</h3>
+    </div>
     <!-->
     <script language="javascript">
 	    function show_date_time() {
