modify dates and names

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>iPersistence</title>
+    <title>Love Counting</title>
     <style>
         body {
             -webkit-font-smoothing: antialiased;
@@ -48,6 +48,7 @@
         <div class="timer">
             <b id="d"></b> Days <b id="h"></b> Hours <b id="m"></b> Minutes <b id="s"></b> Seconds
         </div>
+        <h2>此生所爱，矢志不渝</h2> 
     </div>
     <script language="javascript">
         function timer() {
@@ -73,9 +74,6 @@
         }
         timer();
     </script>
-    <div class="content">
-        <h3>此生所爱，矢志不渝</h3>
-    </div>
     <!-->
     <script language="javascript">
 	    function show_date_time() {
