--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         body {
             -webkit-font-smoothing: antialiased;
             font-family: Helvetica Neue, Helvetica, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
-            background-image: url('https://raw.githubusercontent.com/we11cheng/we11cheng.github.io/master/bg.jpg');
+            background-image: url('bg.jpg');
             font-size: 85%;
             margin: 0;
         }
@@ -44,7 +44,7 @@
 
 <body>
     <div class="content">
-        <h2>Babe，我们已经在一起了</h2>
+        <h2>F ❤️  L</h2>
         <div class="timer">
             <b id="d"></b> Days <b id="h"></b> Hours <br/> <b id="m"></b> Minutes <b id="s"></b> Seconds
         </div>
