--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             document.getElementById('s').innerHTML = s;
         }
         timer();
+        setInterval(timer, 1000);
     </script>
 </body>
 
